minor tweaks to improve list UX fix crash when tabbing onto a list entry fix unavailable lists not appearing that way fix list entry buttons trying to stretch to whatever height the entry widget is creating rendering issues document ListOption add slight padding to LabelController to make it look nicer in lists fix LowProfileButtonWidget still displaying background on hover if inactive throw UnsupportedOperationException when adding lists as options not groups only allow YACL to generate screen once to help prevent memory leaks