@@ -1,5 +1,6 @@
 package dev.isxander.yacl.gui.controllers;
 
+import com.google.common.collect.ImmutableList;
 import dev.isxander.yacl.api.ListOption;
 import dev.isxander.yacl.api.ListOptionEntry;
 import dev.isxander.yacl.api.utils.Dimension;
@@ -18,6 +19,7 @@ public class ListEntryWidget extends AbstractWidget implements ParentElement {
     private final AbstractWidget entryWidget;
 
     private final ListOption<?> listOption;
+    private final ListOptionEntry<?> listOptionEntry;
 
     private final String optionNameString;
 
@@ -26,6 +28,7 @@ public class ListEntryWidget extends AbstractWidget implements ParentElement {
 
     public ListEntryWidget(YACLScreen screen, ListOptionEntry<?> listOptionEntry, AbstractWidget entryWidget) {
         super(entryWidget.getDimension());
+        this.listOptionEntry = listOptionEntry;
         this.listOption = listOptionEntry.parentGroup();
         this.optionNameString = listOptionEntry.name().getString().toLowerCase();
         this.entryWidget = entryWidget;
@@ -33,33 +36,35 @@ public class ListEntryWidget extends AbstractWidget implements ParentElement {
         Dimension<Integer> dim = entryWidget.getDimension();
         entryWidget.setDimension(dim.clone().move(20 * 2, 0).expand(-20 * 3, 0));
 
-        removeButton = new TooltipButtonWidget(screen, dim.xLimit() - 20, dim.y(), dim.height(), dim.height(), Text.of("\u274c"), Text.translatable("yacl.list.remove"), btn -> {
+        removeButton = new TooltipButtonWidget(screen, dim.xLimit() - 20, dim.y(), 20, 20, Text.of("\u274c"), Text.translatable("yacl.list.remove"), btn -> {
             listOption.removeEntry(listOptionEntry);
         });
 
-        moveUpButton = new TooltipButtonWidget(screen, dim.x(), dim.y(), dim.height(), dim.height(), Text.of("\u2191"), Text.translatable("yacl.list.move_up"), btn -> {
+        moveUpButton = new TooltipButtonWidget(screen, dim.x(), dim.y(), 20, 20, Text.of("\u2191"), Text.translatable("yacl.list.move_up"), btn -> {
             int index = listOption.indexOf(listOptionEntry) - 1;
             if (index >= 0) {
                 listOption.removeEntry(listOptionEntry);
                 listOption.insertEntry(index, listOptionEntry);
-                btn.active = index > 0;
+                updateButtonStates();
             }
         });
-        moveUpButton.active = listOption.indexOf(listOptionEntry) > 0;
 
-        moveDownButton = new TooltipButtonWidget(screen, dim.x() + 20, dim.y(), dim.height(), dim.height(), Text.of("\u2193"), Text.translatable("yacl.list.move_down"), btn -> {
+        moveDownButton = new TooltipButtonWidget(screen, dim.x() + 20, dim.y(), 20, 20, Text.of("\u2193"), Text.translatable("yacl.list.move_down"), btn -> {
             int index = listOption.indexOf(listOptionEntry) + 1;
             if (index < listOption.options().size()) {
                 listOption.removeEntry(listOptionEntry);
                 listOption.insertEntry(index, listOptionEntry);
-                btn.active = index < listOption.options().size() - 1;
+                updateButtonStates();
             }
         });
-        moveDownButton.active = listOption.indexOf(listOptionEntry) < listOptionEntry.parentGroup().options().size() - 1;
+
+        updateButtonStates();
     }
 
     @Override
     public void render(MatrixStack matrices, int mouseX, int mouseY, float delta) {
+        updateButtonStates(); // update every render in case option becomes available/unavailable
+
         removeButton.setY(getDimension().y());
         moveUpButton.setY(getDimension().y());
         moveDownButton.setY(getDimension().y());
@@ -76,6 +81,12 @@ public class ListEntryWidget extends AbstractWidget implements ParentElement {
         removeButton.renderHoveredTooltip(matrices);
         moveUpButton.renderHoveredTooltip(matrices);
         moveDownButton.renderHoveredTooltip(matrices);
+    }
+
+    protected void updateButtonStates() {
+        removeButton.active = listOption.available();
+        moveUpButton.active = listOption.indexOf(listOptionEntry) > 0 && listOption.available();
+        moveDownButton.active = listOption.indexOf(listOptionEntry) < listOption.options().size() - 1 && listOption.available();
     }
 
     @Override
@@ -95,7 +106,7 @@ public class ListEntryWidget extends AbstractWidget implements ParentElement {
 
     @Override
     public List<? extends Element> children() {
-        return List.of(moveUpButton, moveDownButton, entryWidget, removeButton);
+        return ImmutableList.of(moveUpButton, moveDownButton, entryWidget, removeButton);
     }
 
     @Override
